[gd_scene load_steps=12 format=1]

[ext_resource path="res://Scripts/worm.gd" type="Script" id=1]
[ext_resource path="res://Art/worm_monster.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemy_state_machine.gd" type="Script" id=3]
[ext_resource path="res://Audio/SFX/chargin.wav" type="Sample" id=4]
[ext_resource path="res://Audio/SFX/hurt.wav" type="Sample" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 40, 30 )

[sub_resource type="Animation" id=2]

resource/name = "hurt"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]

resource/name = "idle"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=4]

resource/name = "walk"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 5, 6 ]
}

[sub_resource type="SampleLibrary" id=5]

samples/charging = {
"db": -12.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/hurt = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 4, 30 )

[node name="Worm" type="KinematicBody2D" groups=[
"enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
hp = 40
damage = 1
speed = 2
overrun = true

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 35, 0 )
texture = ExtResource( 2 )
vframes = 2
hframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="EnemyStateMachine" type="Node" parent="."]

editor/display_folded = true
script/script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyStateMachine"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hurt = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 5 )
config/pitch_random = 0.0

[node name="LeftCast" type="RayCast2D" parent="."]

transform/pos = Vector2( -47, 21 )
enabled = true
cast_to = Vector2( -200, 0 )
layer_mask = 1
type_mask = 15

[node name="LeftFootCast" type="RayCast2D" parent="."]

transform/pos = Vector2( -50, 30 )
enabled = true
cast_to = Vector2( -1, 1 )
layer_mask = 1
type_mask = 15

[node name="RightFootCast" type="RayCast2D" parent="."]

transform/pos = Vector2( 49, 30 )
enabled = true
cast_to = Vector2( 1, 1 )
layer_mask = 1
type_mask = 15

[node name="LeftCast2" type="RayCast2D" parent="."]

transform/pos = Vector2( -48, -16 )
enabled = false
cast_to = Vector2( -200, 0 )
layer_mask = 1
type_mask = 15

[node name="RightCast" type="RayCast2D" parent="."]

transform/pos = Vector2( 48, 16 )
enabled = false
cast_to = Vector2( 200, 0 )
layer_mask = 1
type_mask = 15

[node name="WalkTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="."]

transform/pos = Vector2( -48, 0 )
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -4, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( -4, 0 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0


